--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,47 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <!--Bulma stylesheet-->
+    <link rel="stylesheet" href="/stylesheets/bulma/css/bulma.css">
   </head>
   <body>
+
+    <!-- Using Bulma template for navbar -->
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item">
+        Home
+      </a>
+
+      <a class="navbar-item">
+        About
+      </a>
+
+      <a class="navbar-item">
+        Favourite Places
+      </a>
+
+      <a class="navbar-item">
+        Categories
+      </a>
+    </div>
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-primary">
+            <strong>Sign up</strong>
+          </a>
+          <a class="button is-light">
+            Log in
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
     {{{body}}}
   </body>
 </html>
