created about page updated index

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!-- Welcome message to the website and link to the GitHub repository -->
+
+<h1>My Barrie</h1>
+<p>Welcome to My Barrie where you can get to know about all the cool places around the town.</p>
+
+<br><br><br>
+
+<p>You can find the source code on <a href="https://github.com/InderjitSingh2002/MyBarrie" target="_blank">GitHub</a></p>
