--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,11 +12,11 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
+      <a class="navbar-item" href="/">
         Home
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="/about">
         About
       </a>
 
