-added create functionality for categories

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,7 @@
         Favourite Places
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="/categories">
         Categories
       </a>
     </div>
